<resources>
    <string name="app_name">MobCtrlSys</string>
    <string name="terminal">Terminal</string>
    <string name="process">Process</string>
    <string name="motion">Motion</string>

    <string name="connect_to_machine">Connect to machine</string>
    <string name="connected_to_machine">Connected to machine</string>

    <string name="x1" translatable="false">x1</string>
    <string name="x10" translatable="false">x10</string>
    <string name="x100" translatable="false">x100</string>
    <string name="x5" translatable="false">x5</string>
    <string name="x25" translatable="false">x25</string>

    <string name="z" translatable="false">Z</string>
    <string name="increase_z" translatable="false">+Z</string>
    <string name="decrease_z" translatable="false">-Z</string>
    <string name="jog_home">Home</string>
    <string name="jog_to">Jog to</string>
    <string name="reset_the_coordinate">Reset the coordinate?</string>

    <string name="pulse">Pulse</string>
    <string name="pause">Pause</string>
    <string name="gap_voltage">Gap voltage</string>
    <string name="voltage">Voltage</string>
    <string name="start_the_process">Run the process</string>
    <string name="stop_the_process">Stop the process</string>
    <string name="state">State</string>
    <string name="stopped">Stopped</string>
    <string name="running">Running</string>

    <string name="zero_value" translatable="false">0</string>
    <string name="unknown" translatable="false">\???</string>

    <string name="unit_millimeter">mm</string>
    <string name="unit_microsecond">μs</string>
    <string name="unit_volt">V</string>

    <string name="jog">Jog</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="connect">Connect</string>
    <string name="error_wrong_value">Error: wrong value</string>
    <string name="error_sending">Error sending</string>
    <string name="error_connecting">Error connecting</string>
    <string name="dont_ask_again">Don\'t ask again</string>
    <string name="battery_optimization_warning">Turn off battery optimization to ensure stable connection with the machine</string>
    <string name="warning">Warning</string>
    <string name="responsibility_warning">YOU ARE SOLELY RESPONSIBLE FOR ANY DAMAGE RESULTING FROM INCORRECT USAGE OF THIS PRODUCT</string>
    <string name="battery_optimization">Battery optimization</string>
    <string name="i_understand">I understand</string>
    <string name="turn_off">Turn off</string>
    <string name="ip_address">IP address</string>
</resources>